[feat] Generate project website

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Glyphor App</title>
-    <meta name="description" content="Glyphor Generated Project" />
-    <meta name="author" content="Glyphor" />
+    <title>Hickory & Stein | BBQ & Biergarten</title>
+    <meta name="description" content="Where Texas smoke meets Bavarian tradition. High-end BBQ and German beer pairings in a cinematic garden setting." />
+    
+    <!-- Google Fonts: Oswald for headings, Inter for UI -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Oswald:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Glyphor App" />
-    <meta property="og:description" content="Glyphor Generated Project" />
+    <meta property="og:title" content="Hickory & Stein | BBQ & Biergarten" />
+    <meta property="og:description" content="Experience the pairing of 16-hour smoked brisket and cold German lagers." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://fuse.glyphor.ai" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Glyphor" />
-    <meta name="twitter:image" content="https://fuse.glyphor.ai" />
+    
+    <style>
+      body {
+        background-color: #0c0a09; /* warm black */
+      }
+    </style>
   </head>
 
   <body>
